--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,6 +78,23 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
+.custom-marker .marker-circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 3px solid white;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+  background: white;
+}
+
+.custom-marker .marker-circle img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 .leaflet-container {
   width: 100%;
   height: 100%;
